feat: disable button, pending styles

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,12 @@
       <article class="dice">
         <h1 class="title">Dice</h1>
         <p class="subtitle">Passphrase Generator</p>
-        <p class="description">Create a strong and secure passphrase</p>
+        <p class="description">
+          Create a strong, secure and memorable passphrase
+        </p>
 
         <div class="passphrase" data-passphrase></div>
-        <button class="button" data-generate>Generate Passphrase</button>
+        <button class="button" disabled data-generate>Loading words ...</button>
       </article>
 
       <p class="intro">
