--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
 
         <div class="passphrase">
           <div class="passphrase__content" data-passphrase></div>
-          <button class="passphrase__icon" data-passphrase-copy>
+          <button class="passphrase__button" data-passphrase-copy>
             <svg
-              class="copy-icon"
+              class="passphrase__icon"
               fill="none"
               stroke-linecap="round"
               stroke-linejoin="round"
@@ -42,6 +42,10 @@
                 d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-6 9l2 2 4-4"
               ></path>
             </svg>
+            <div class="passphrase__action-text" data-text-copy>Copy</div>
+            <div class="passphrase__action-text hidden" data-text-copy-done>
+              Copied!
+            </div>
           </button>
         </div>
         <button class="button" disabled data-generate>Loading words ...</button>
@@ -54,7 +58,6 @@
         stroke-width="2"
         viewBox="0 0 24 24"
         stroke="currentColor"
-        class="w-5 h-5"
       ></svg>
 
       <p class="intro">
