refactor: description style

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <h1 class="title">Dice</h1>
         <p class="subtitle">Passphrase Generator</p>
         <p class="description">
-          Create a strong, secure and memorable passphrase
+          Create a Strong, Secure and Memorable Passphrase
         </p>
 
         <div class="passphrase">
