--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
               stroke-linecap="round"
               stroke-linejoin="round"
               stroke-width="2"
+              width="24"
+              height="24"
               viewBox="0 0 24 24"
               stroke="currentColor"
             >
