--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,17 @@
   <body>
     <main role="main">
       <article class="dice">
+        <svg class="logo" viewBox="0 0 512 512">
+          <g>
+            <path d="M0 0h512v512H0z" fill="green"></path>
+            <path
+              d="M302.87 255.5a47.37 47.37 0 1 1-47.37-47.37 47.37 47.37 0 0 1 47.37 47.37zM128.5 81.18a47.37 47.37 0 1 0 47.41 47.32 47.37 47.37 0 0 0-47.41-47.32zm253.91 0a47.37 47.37 0 1 0 47.41 47.32 47.37 47.37 0 0 0-47.32-47.32zM128.5 335.09a47.37 47.37 0 1 0 47.41 47.41 47.37 47.37 0 0 0-47.41-47.41zm253.91 0a47.37 47.37 0 1 0 47.41 47.41 47.37 47.37 0 0 0-47.32-47.41zm102 92.93a56.48 56.48 0 0 1-56.39 56.48h-344a56.48 56.48 0 0 1-56.52-56.48v-344A56.48 56.48 0 0 1 83.98 27.5h344a56.48 56.48 0 0 1 56.52 56.48zm-20-344a36.48 36.48 0 0 0-36.39-36.52h-344A36.48 36.48 0 0 0 47.5 83.98v344a36.48 36.48 0 0 0 36.48 36.52h344a36.48 36.48 0 0 0 36.52-36.48z"
+              fill="#fff"
+            ></path>
+          </g>
+        </svg>
         <h1 class="title">Dice</h1>
+
         <p class="subtitle">Passphrase Generator</p>
         <p class="description">
           Create a Strong, Secure and Memorable Passphrase
@@ -52,15 +62,6 @@
         </div>
         <button class="button" disabled data-generate>Loading words ...</button>
       </article>
-
-      <svg
-        fill="none"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-      ></svg>
 
       <p class="intro">
         A passphrase is usually longer than a password and contains a list of
