refactor: add github repo

--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,7 @@
         <li>
           <a href="http://world.std.com/~reinhold/diceware.html">Diceware</a>
         </li>
+        <li><a href="https://github.com/anandgraves/dice">Github</a></li>
       </ul>
     </main>
 
