--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Dice Passphrase Generator</title>
     <link
-      href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600,700"
+      href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600&family=IBM+Plex+Mono"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./index.css" />
