--- a/src/index.html
+++ b/src/index.html
@@ -105,6 +105,6 @@
       </ul>
     </main>
 
-    <script src="./index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
