--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 
         <div class="passphrase">
           <div class="passphrase__content" data-passphrase></div>
-          <button class="passphrase__button" data-passphrase-copy>
+          <button class="passphrase__button hidden" data-passphrase-copy>
             <svg
               class="passphrase__icon"
               fill="none"
